[project]
name = "forage-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=1.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
